2009-03-09 Francois Suter <typo3@cobweb.ch>

	* Added checks for proper initialization of DB object on devlog call
	* Added custom categories for extension configuration options (usable as TYPO3 4.3)

2009-03-02 Francois Suter <typo3@cobweb.ch>

	* Made CSH for severity.image non translatable (thanks to Steffen Muller)
	* Completed update of the manual
	* Relased to TER as version 2.7.0

2009-03-01 Francois Suter <typo3@cobweb.ch>

	* Modified the CSH text, in particular severity levels descriptions
	* Updated the manual

2009-02-26 Francois Suter <typo3@cobweb.ch>

	* Completed implementation of CSH for both log table view and TCEform single view
	* Removed UID column in log table view
	* Moved date column to first place and placed links to log runs on that column
	* Changed default order in Web > List view, most recent record on top (thanks to Steffen Muller)
	* Changed log table styles slightly to better match t3skin

2009-02-24 Francois Suter <typo3@cobweb.ch>

	* Added CSH to header cells in log table view (thanks to Steffen Muller)

2009-02-16 Francois Suter <typo3@cobweb.ch>

	* Added better display of records in TCEforms (thanks to Fabien Udriot)
	* Added visible warning in BE module about filtered keys
	* Added t3lib_db::sql_free_results() calls wherever relevant
	* Added a button to clear search and all filters

2008-11-07 Francois Suter <typo3@cobweb.ch>

	* Added option for filtering out (extension) keys
	* Released version 2.6.0

2008-10-27 Francois Suter <typo3@cobweb.ch>

	* Added option for limiting the size of the log table
	* Added option for minimum level of severity for logging
	* Added option for configuring autorefresh frequency
	* Optimized hook usage by making it a (pseudo-)singleton

2008-10-13 Francois Suter <typo3@cobweb.ch>

	* Caught unitialized value in BE module

2008-10-13 Francois Suter <typo3@cobweb.ch>

	* Updated the manual
	* Released version 2.5.0

2008-10-09 Francois Suter <typo3@cobweb.ch>
